# Liquidity-Arena

./: .clang-format  .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bench_results.txt  build.bat  build.sh  build_error.txt  docker-compose.yml  pyproject.toml  ws_client_example.py
.cache/clangd/index/: latency_bench.cpp.3F03829623FC715D.idx  main.cpp.EE1AEC0E6B5B08FD.idx  matching_engine.cpp.720A6C33EABD1911.idx  matching_engine.hpp.31B4A1B178895B6A.idx  matching_engine_test.cpp.048B3601FBC64603.idx  message.hpp.659902B606F0DC22.idx  object_pool.hpp.14E53C770160F956.idx  object_pool_test.cpp.60952031306AC638.idx  order.hpp.11918282048C4827.idx  order_book.cpp.61722C96D0AADEF0.idx  order_book.hpp.7BF99F53CAE0A1F1.idx  order_book_test.cpp.15DD56B85BFA05EF.idx  price_level.hpp.99CF055CC59C3A28.idx  price_level_test.cpp.D8440902F15C064B.idx  tcp_server.cpp.E2C0A141A997933C.idx  tcp_server.hpp.E910CFB328A92722.idx  types.hpp.AE8F542CA58A26E5.idx
.github/workflows/: ci.yml
docs/: agents.md  latency_model.md  market_model.md  matching_engine.md  metrics.md  strategy_api.md
engine/: main.cpp
engine/bench/: latency_bench.cpp
engine/include/: matching_engine.hpp  message.hpp  object_pool.hpp  order.hpp  order_book.hpp  price_level.hpp  spsc_queue.hpp  strategy.hpp  tcp_server.hpp  types.hpp
engine/src/: matching_engine.cpp  order_book.cpp  tcp_server.cpp
engine/tests/: matching_engine_test.cpp  object_pool_test.cpp  order_book_test.cpp  price_level_test.cpp
frontend/: app.js  index.html  style.css
simulation/: __init__.py  metrics.py  requirements.txt  run_simulation.py  simulator.py
simulation/agents/: __init__.py  base_agent.py  human_agent.py  informed_trader.py  latency_arb.py  market_maker.py  momentum_trader.py  noise_trader.py
simulation/config/: default.yaml
simulation/market/: __init__.py  latency_model.py  price_process.py  tcp_client.py  ws_bridge.py
simulation/tests/: test_agents.py  test_integration.py  test_metrics.py  test_price_process.py
